[package]
name = "watoukuang-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
warp = "0.4.2"
futures = "0.3.31"
serde_json = "1.0.145"
chrono = "0.4.31"
tokio-tungstenite = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"
http = "0.2"
